add: comments, use alias everywhere for document, tinyDom.html method to get or inject HTMLString into element

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script>
         $(function() {
             console.log($('body'));
+            $('body').addClass('test-class');
+            $('body').html($('body').html() + '<h1>Test $.html</h1>');
         });
     </script>
 </body>
