fix: remove expression fragments after processing, add: comments

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         </ul>
     </script>
 
+    <script type="text/template" id="simpleLoop">{{#items}}<br />Item: {{key}}{{/items}}</script>
+
     <script>
         $(function() {
             console.log($('body'));
