--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title></title>
 </head>
 <body>
+    <section class="main"></section>
+
     <!--<script src="src/ki.js"></script>-->
     <script src="src/tiny-dom.js"></script>
     <script src="src/tiny-dom-tpl.js"></script>
@@ -21,6 +23,8 @@
             {{/test.a.b.c}}
         </select>
 
+        {{>simpleLoop}}
+
         <ul>
             {{#criterias}}
             <li>
@@ -30,7 +34,14 @@
         </ul>
     </script>
 
-    <script type="text/template" id="simpleLoop">{{#items}}<br />Item: {{key}}{{/items}}</script>
+    <script type="text/template" id="simpleLoop">
+        <p>"Include simpleLoop partial"</p>
+        <ul>
+            {{#items}}
+                <li>Partial item: {{key}}</li>
+            {{/items}}
+        </ul>
+    </script>
 
     <script>
         $(function() {
@@ -38,6 +49,8 @@
             $('body').addClass('test-class');
 
             tpl.cache.testTpl = testTpl.innerHTML;
+            tpl.cache.simpleLoop = simpleLoop.innerHTML;
+
             var html = tpl('testTpl', {
                 model: 'Gretsch',
                 description: '6120 Chet atkins 1962 édition limitée',
@@ -53,6 +66,7 @@
                         value: 'Rouge foncée'
                     }
                 ],
+                items: [0,1,2,3],
                 picture: 'http://static.musicbusiness.fr/media/catalog/product/cache/5/image/9df78eab33525d08d6e5fb8d27136e95/g/r/gretsch-g5422tdc-walnut-2504812517-1.jpg',
                 test: {
                     a: {
@@ -64,7 +78,7 @@
             });
             console.log(html);
 
-            $('body').html($('body').html() + html);
+            $('.main').html(html);
         });
     </script>
 </body>
